# advent-of-code-2022

./: .gitignore  README.md  conftest.py  pyproject.toml
01 Calorie Counting/: A__largest_group.py  A__ruthless.py  B__ruthless.py  B__sum_largest.py
02 Rock Paper Scissors/: A__best_score.py  A__ruthless.py  B__find_best_score.py  B__ruthless.py
03 Rucksack Reorganization/: A__ruthless.py  A__sum_groups.py  B__ruthless.py  B__sum_groups.py
04 Camp Cleanup/: A__ruthless.py  B__ruthless.py
